@@ -1,6 +1,9 @@
 Version 6.18
 TODO
-    - #89: fetchmail feature: skip fetching read mail (new: imap_search, imap_on_delete)
+    - #89: fetchmail feature: skip fetching read mail.
+      New `imap_search` and `imap_on_delete` to fetch only `Unseen` messages and set them to `\Seen`.
+    - add `-s,--searchset` to override imap search and setting of flags for all rcfile's in the command
+    - fix "SyntaxError: Non-ASCII in file, but no encoding declared" (only Python 2.7)
 
 Version 6.17
 15 June 2021
